--- a/ClientAPI/walletCreation.ipynb
+++ b/ClientAPI/walletCreation.ipynb
@@ -105,7 +105,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.1"
+   "version": "3.9.1 (v3.9.1:1e5d33e9b9, Dec  7 2020, 12:10:52) \n[Clang 6.0 (clang-600.0.57)]"
   },
   "orig_nbformat": 4,
   "vscode": {
